Expand library buttons to prevent wrapping

--- a/app/assets/stylesheets/partials/_library.sass
+++ b/app/assets/stylesheets/partials/_library.sass
@@ -9,7 +9,7 @@
     $sb-padding: 0.3em 0.5em
     +sassy-button("matte", 5px, 1.25em, #EEEEEE, #EEEEEE, $dark-blue, "inset")
     margin: 0.5em 0
-    width: 330px
+    width: 340px
     span.icon
       +group-icon
   a.collection
